<resources>
    <string name="app_name">BocaPrinter</string>
    <string name="action_settings">Settings</string>
    <string name="Screen_Title">Boca Systems Android Tester V6.1</string>
    <string name="String_BT">Blue Tooth</string>
    <string name="String_BMP">BMP Image Viewer</string>
    <string name="String_PP">Printer Path</string>
    <string name="String_Dither">Dither Image</string>
    <string name="String_Scale">Scale Image</string>
    <string name="String_DPI">DPI Resolution</string>
    <string name="String_OR">Orientation (Print Image)</string>
    <string name="String_SIZE">Stock Sizes in Inches</string>
    <string name="String_STATUS">Printer Status</string>
    <string name="String_Connecting">Attempting to connect, please wait.</string>
    <string name="String_CON">Connected</string>
    <string name="String_NOT">Not Connected</string>
    <string name="String_Count">#Tickets</string>
    <string name="String_LOGO">Logo ID#</string>
    <string name="String_TEST">Enter FGL text commands or WIFI IP address here</string>
    <string name="String_Help">Help</string>
    <string name="String_Close">Close</string>
    <string name="String_Image">BMP, JPG or PNG</string>
    <string name="String_Doc">PDF or TXT</string>
    <string name="String_File">File Type</string>
    <string name="String_OK">OK</string>
    <string name="String_Cancel">Cancel</string>
    <string name="String_NoFile">No files or directories</string>
    <string name="String_FN">Filename</string>
    <string name="String_IP"></string>
    <string name="String_EN">Status: Enabled</string>
    <string name="String_DIS">Status: Disabled</string>
    <string name="String_DISC">Status: Disconnected</string>
    <string name="Ticket_Con_L">Concert (2 x 5.5)</string>
    <string name="Ticket_Con_P">Concert (5.5 x 2)</string>
    <string name="Ticket_Cin_L">Cinema (3.25 x 2)</string>
    <string name="Ticket_Cin_P">Cinema (2 x 3.25)</string>
    <string name="Ticket_CC_L">Credit Card (2.13 x 3.37)</string>
    <string name="Ticket_CC_P">Concert (3.37 x 2.13)</string>
    <string name="Ticket_Rec_L">Receipt (3.25 x 8)</string>
    <string name="Ticket_Rec_P">Receipt (8 x 3.25)</string>
    <string name="Ticket_Ski_L">Ski (3.25 x 6)</string>
    <string name="Ticket_Ski_P">Ski (6 x 3.25)</string>
    <string name="Ticket_Four_L">4 X 6</string>
    <string name="Ticket_Four_P">6 X 4</string>
    <string name="Ticket_Wst1_L">Wristband 1 (1 x 11)</string>
    <string name="Ticket_Wst1_P">Wristband 1 (11 x 1)</string>
    <string name="Ticket_Wst2_L">Wristband 2 (1.328 x 11)</string>
    <string name="Ticket_Wst2_P">Wristband 2 (11 x 1.328)</string>
    <string name="Ticket_Generic_L">Letter (8.5 x 11)</string>
    <string name="Ticket_Generic_P">Letter (11 x 8.5)</string>
    <string name="Button_Con_WIFI">WIFI Connect</string>
    <string name="Button_Dis_WIFI">WIFI Disconnect</string>
    <string name="Button_Con_USB">USB Connect</string>
    <string name="Button_Dis_USB">USB Disconnect</string>
    <string name="Button_Scan">BlueTooth Scan</string>
    <string name="Button_Con">BlueTooth Connect</string>
    <string name="Button_Dis">BlueTooth Disconnect</string>
    <string name="Button_D1">Yes</string>
    <string name="Button_D2">No</string>
    <string name="Button_P1">Path 1</string>
    <string name="Button_P2">Path 2</string>
    <string name="Button_P3">Path 3</string>
    <string name="Button_P4">Path 4</string>
    <string name="Button_Res2">200</string>
    <string name="Button_Res3">300</string>
    <string name="Button_Res6">600</string>
    <string name="Button_OrL">Landscape</string>
    <string name="Button_OrP">Portrait</string>
    <string name="Button_Minus">-</string>
    <string name="Button_Plus">+</string>
    <string name="Button_Clr">Clear Status Window</string>
    <string name="Button_FGL">Transmit FGL Text</string>
    <string name="Button_Read">Read Status</string>
    <string name="Button_Memory">Clear Printer Memory</string>
    <string name="Button_Print_TT">Print Test Ticket</string>
    <string name="Button_Sel_File">Print Image or Text File</string>
    <string name="Button_Sel_BMP">Select BMP</string>
    <string name="Button_Print_BMP">Print BMP</string>
    <string name="Button_DLogo">Download Logo</string>
    <string name="Button_PLogo">Print Logo</string>
    <string name="BMP1">Boca Systems</string>
    <string name="BMP2">Checkmark</string>
    <string name="BMP3">Face</string>
    <string name="BMP4">Hardware</string>
    <string name="BMP5">Lemurs</string>
    <string name="Actual">Actual Size</string>
    <string name="Scale">Scale to fit</string>
    <string name="PrintC">Print Cut</string>
    <string name="PrintNC">Print No Cut</string>

</resources>

